# AI-Hackathon-2

./: CLAUDE.md  README.md  requirements-dev.txt
.agents/workflows/: spec_driven_workflow.md
.claude/: CLAUDE.md
.specify/memory/: constitution.md
phase1/: .gitignore  README.md  pyproject.toml
phase2/: README.md
phase2/backend/: main.py  models.py  pyproject.toml
phase2/backend/core/: auth.py  db.py
phase2/backend/routes/: tasks.py
phase2/backend/tests/: test_db.py  test_models.py
phase2/frontend/: package.json  pnpm-lock.yaml
phase3/: README.md  env.example
phase3/backend/: .gitignore  inspect_pkg.py  inspect_pkg_2.py  mcp_server.py  models.py  test_agent_tools.py  test_engine.py  test_task.py
phase3/frontend/: README.md  package.json
phase4/: README.md  test_auth.py
phase4/backend/: .dockerignore  Dockerfile  README.md  main.py  mcp_server.py  pyproject.toml  query_db.py
phase4/backend/core/: auth.py  db.py
phase4/backend/routes/: chat.py
phase4/frontend/: .dockerignore  Dockerfile  next.config.ts  pnpm-lock.yaml
phase4/k8s/: backend-deployment.yaml  frontend-config.yaml  frontend-deployment.yaml  frontend-service.yaml
specs/001-todo-management/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-phase2-web/: plan.md  spec.md  tasks.md
specs/002-upgrade-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-phase3-chatbot/: plan.md  spec.md  tasks.md
specs/010-phase4-deployment/: plan.md  spec.md  tasks.md
src/cli/: main.py
src/core/: engine.py  exceptions.py
tests/unit/: test_engine.py  (+1 more)
(+47 files in other folders)
